--- a/RzutKostka.csproj
+++ b/RzutKostka.csproj
@@ -57,6 +57,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\kk10.jpg" />
+	  <None Remove="Resources\Images\kk12.jpg" />
+	  <None Remove="Resources\Images\kk4.jpg" />
+	  <None Remove="Resources\Images\kk6.jpg" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
